Bug 58406 - [recent build error] intel_uxa.c:1301:10: error: 'false' undeclared (first use in this function)
Summary: [recent build error] intel_uxa.c:1301:10: error: 'false' undeclared (first us...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-17 12:18 UTC by Fabio Pedretti
Modified: 2012-12-17 12:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Fabio Pedretti 2012-12-17 12:18:16 UTC
Building on Ubuntu 12.04 fails with this error:
https://launchpadlibrarian.net/125995241/buildlog_ubuntu-precise-amd64.xserver-xorg-video-intel_2%3A2.20.16%2Bgit1212171250.5b0572~gd~p_FAILEDTOBUILD.txt.gz

Builds OK on 12.10. It also builds fine on 12.04 up to intel 2.20.15
Comment 1 Chris Wilson 2012-12-17 12:39:28 UTC
commit 4d7e3a9123cf41d2dd97c0a8a0d461c189064822
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 17 12:34:05 2012 +0000

    uxa: Fix copy'n'paste of false not FALSE
    
    Bugzilla; https://bugs.freedesktop.org/show_bug.cgi?id=58406
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Chris Wilson 2012-12-17 12:40:43 UTC
Weird it seems like 'false' is pulled in from somewhere on my systems.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.