uxa: Fix copy'n'paste of false not FALSE

Bugzilla; https://bugs.freedesktop.org/show_bug.cgi?id=58406
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>